# E-Price-Germany

./: README.md  pyproject.toml
0_DataSourcing/: Commodities API.ipynb  Data Analysis.ipynb  Netztransperenz API.ipynb  SMARTDE API.ipynb  Test 1 - Model.ipynb  Twelve data API.ipynb  Unify Data.ipynb  Weather Open Meteo API.ipynb
2_Models/: Test 3 - epftool.ipynb
