[project]
name = "e-price-germany"
version = "0.1.0"
description = "ML-based hourly electricity price prediction for Germany"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "requests>=2.32",
    "requests-cache>=1.2",
    "retry-requests>=2.0",
    "openmeteo-requests>=1.3",
    "twelvedata>=1.2",
    "yfinance>=0.2",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "nbstripout>=0.9.1",
]
